@@ -115,20 +115,13 @@
     prefer the keyboard, you can try the above procedure, with the
     following notes:
     <ul>
-
-      <li>Open a shell by  double clicking the "Cygwin"
-	icon
-      </li>
-
-      <li> Start a text editor by running <tt>notepad</tt>.  Save the
-	result as <code>test.ly</code> and make sure that Notepad does
-	not append <code>.txt</code> to the name.
-
-</li>
-
-      <li> The PDF file is left in C: -&gt; CYGWIN -&gt; HOME -&gt;
-	<em>your-user-name</em>.
-      </li>
+    <li> double click the LilyPond icon
+    <li> this will open a test file. Save it as <code>test.ly</code>
+    on the desktop
+    <li> double click <code>test.ly</code>
+    <li> After a few seconds,  a <code>test.pdf</code> file should
+    appear.
+    
     </ul>
   </li>
 
